# simpleproto

./: Makefile.am  ProjectHome.md  README  SConstruct  configure.in  graphics.cpp  graphics.pb.h  graphics_client.cpp  graphics_client.h  rpc.cpp  simpleprotorpc.pc.in
m4/: ax_boost_base.m4
scons-local-1.1.0/: Boost.py  GL.py
simpleprotographics/: SConscript  graphics.cpp  graphics.h  graphics.pb.cc  graphics.proto  graphics_server.cpp  graphics_server.h
simpleprotorpc/: SConscript  rpc.cpp  rpc.h  util.cpp
test/: test_graphics_client.cpp  test_rpc_server.cpp
trunk/: LICENSE  Makefile.am  README  SConstruct  configure.in  simpleprotographics.pc.in  test_graphics_client.cpp  test_rpc_server.cpp
trunk/m4/: ax_boost_thread.m4  ax_check_gl.m4  ax_check_glut.m4
trunk/scons-local-1.1.0/: Boost.py  GL.py
trunk/scons-local-1.1.0/SConsAddons/: AutoDist.py
trunk/simpleprotographics/: graphics.cpp  graphics.h  graphics.pb.h  graphics.proto  graphics_server.cpp  graphics_server.h
trunk/simpleprotorpc/: SConscript  rpc.cpp  rpc.h  util.cpp  util.h
trunk/test/: SConscript  test_graphics_client.cpp  test_rpc_server.cpp
