AC_INIT(rpc.cpp)
AM_INIT_AUTOMAKE(simpleproto,0.1)

AC_PROG_CXX
AC_PROG_RANLIB
AC_PROG_INSTALL

# Check for OpenGL libraries
AX_CHECK_GL
AX_CHECK_GLU
AX_CHECK_GLUT

# Check for Boost threading libraries
AX_BOOST_BASE
AX_BOOST_THREAD

AC_LANG(C++)
CXXFLAGS="${CXXFLAGS=}"

AC_MSG_CHECKING(whether to enable debugging)
debug_default="yes"
AC_ARG_ENABLE(debug, [  --enable-debug=[no/yes] turn on debugging
                       [default=$debug_default]],, enable_debug=$debug_default)
if test "x$enable_debug" = "xyes"; then
  CXXFLAGS="$CXXFLAGS -g -Wall"
  AC_MSG_RESULT(yes)
else
  CXXFLAGS="$CXXFLAGS -O3"
  AC_MSG_RESULT(no)
fi

AC_MSG_CHECKING([for the Google protocol buffer header])
AC_COMPILE_IFELSE(
  [ #include <google/protobuf/stubs/common.h> ],
  [
    AC_MSG_RESULT(yes)
  ],
  [
    AC_MSG_RESULT(no)
  ])

AX_CXX_CHECK_LIB(protobuf, [google::protobuf::DoNothing ()])

AC_SUBST(CXXFLAGS)

# Note: we don't actually depend on this...this is working as intended
# since we don't care about autoconf's variables
AC_CONFIG_HEADERS(config.h)
AC_OUTPUT(Makefile)
